--- a/README.rdoc
+++ b/README.rdoc
@@ -62,6 +62,15 @@ Define 'acts_as_image_hander' into Image handler model (ex. User).
     acts_as_image_handler # define image hander
   end
 
+== Routing
+
+Add 'load_image' action in 'config/routes.rb'
+
+  resources :users do
+    member do
+      get 'load_image'
+    end
+  end
 
 == Controller
 
@@ -75,7 +84,6 @@ Set image holder to image handler by method 'set_iamge_holder'.
       def update
         set_image_holder @user
            :
-
 
 == View
 
@@ -99,6 +107,10 @@ Examples _form.html.erb for User
         <%= f.text_field :username %>
       </div>
       <div class="field">
+        <%= f.label :email %><br />
+        <%= f.text_field :email %>
+      </div>
+      <div class="field">
         <%= f.label :image_file %><br />
         <%= f.file_field :image_file %>
       </div>
@@ -115,6 +127,19 @@ Examples _form.html.erb for User
 
 Add file_field form, and check box for remove the image.
 Parameter name is fixed, :image_file and :remove_image.
+
+Examples image load in index.html.erb
+
+    <% @users.each do |user| %>
+    <tr>
+      <td><%= image_tag image_thumb_path user if user.user_image_holder %></td>
+      <td><%= user.username %></td>
+      <td><%= link_to 'Show', user %></td>
+      <td><%= link_to 'Edit', edit_user_path(user) %></td>
+      <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
+    <% end %>
+
 
 == TODO
 
